# duckdb_error

./: file.db  main.py  pyproject.toml  readme.md
