[tool.poetry]
name = "duckdb-error"
version = "0.1.0"
description = ""
authors = ["Mathias <mathias.scroccaro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
duckdb = "^1.1.1"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
